comparacion de juegos

--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
         </form>
         <ul id="lista"></ul>
     </section>
+    <div id = "comparador"> </div>
     </main>
-    <script src= "proyect.js"></script>
+    <script src= "buscador.js"></script>
+    <script src= "comparador.js"></script>
 
 </body>
 </html>
