--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
         </form>
         <ul id="lista"></ul>
     </section>
-    <div id = "comparador"> </div>
+    <div id="contenedor">
+    </div>
     </main>
     <script src= "buscador.js"></script>
     <script src= "comparador.js"></script>
