--- a/ProyectoSinAngular/Modo2.html
+++ b/ProyectoSinAngular/Modo2.html
@@ -2,15 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    <header>
-        <h1>Buscador de Juegos</h1>
-    </header>
-    <main>
+    
     <section class="containerPrincipal">
+        <img src="" alt="imagen del juego" id="imagenJuego" style="max-width: 300px;">
         <form class="containerForm" id="containerForm">
             <label for="nombre">Buscar Juego:</label>
             <input type="text" id="nombre" name="nombre" placeholder="Ingrese el nombre" onkeyup="filtrarJuegos(event.target.value)">
@@ -18,11 +17,7 @@
         </form>
         <ul id="lista"></ul>
     </section>
-    <div id="contenedor">
-    </div>
-    </main>
     <script src= "buscador.js"></script>
-    <script src= "comparador.js"></script>
-
+    <script src="modo2Manager.js"></script>
 </body>
 </html>
